@@ -1,3 +1,7 @@
+* 2013-10-08 - thorben.betten@open-xchange.com
+
+ - Fix for bug 29136: Do not change session's IP address in case IP-check is turned off and non-white-listed client
+
 * 2013-09-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 28770: Once again -- Removed &nbsp; entities from html2text converted plain text
